adjust transactions
